--- a/manager/src/main/resources/inflationManagerMain.fxml
+++ b/manager/src/main/resources/inflationManagerMain.fxml
@@ -36,7 +36,7 @@
                             <children>
                                 <TextArea fx:id="inflationPoolDataTextArea" prefHeight="591.0" prefWidth="874.0"
                                           promptText="Paste your inflation pool data here or use one of the retrieval methods to the right"
-                                          stylesheets="@main.css" AnchorPane.bottomAnchor="80.0"
+                                          stylesheets="@inflationManagerMain.css" AnchorPane.bottomAnchor="80.0"
                                           AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="201.0"
                                           AnchorPane.topAnchor="5.0"/>
                                 <AnchorPane layoutX="880.0" layoutY="32.0" prefHeight="584.0" prefWidth="185.0"
@@ -82,7 +82,7 @@
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                             <children>
                                                 <TextArea fx:id="federationDataTextArea1" prefHeight="200.0"
-                                                          prefWidth="200.0" stylesheets="@main.css"
+                                                          prefWidth="200.0" stylesheets="@inflationManagerMain.css"
                                                           AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                                           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0"/>
                                                 <Label layoutX="169.0" layoutY="6.0" text="Data Set 1"
@@ -92,7 +92,7 @@
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                             <children>
                                                 <TextArea fx:id="customDataTextArea1" prefHeight="200.0"
-                                                          prefWidth="200.0" stylesheets="@main.css"
+                                                          prefWidth="200.0" stylesheets="@inflationManagerMain.css"
                                                           AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                                           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0"/>
                                                 <Label layoutX="176.0" layoutY="6.0" text="Data Set 2"
