--- a/manager/src/main/resources/inflationManagerMain.fxml
+++ b/manager/src/main/resources/inflationManagerMain.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
@@ -40,12 +40,28 @@
                                           AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="201.0"
                                           AnchorPane.topAnchor="5.0"/>
                                 <AnchorPane layoutX="880.0" layoutY="32.0" prefHeight="584.0" prefWidth="185.0"
-                                            AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="32.0">
+                                            AnchorPane.bottomAnchor="80.0" AnchorPane.rightAnchor="9.0"
+                                            AnchorPane.topAnchor="32.0">
                                     <children>
                                         <Button fx:id="getFederationDataBtn" layoutX="14.0" layoutY="14.0"
                                                 mnemonicParsing="false" prefHeight="25.0" prefWidth="170.0"
                                                 text="Get From Fed.network" AnchorPane.leftAnchor="5.0"
                                                 AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0"/>
+                                        <Separator prefHeight="0.0" prefWidth="185.0" AnchorPane.bottomAnchor="60.0"
+                                                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+                                        <Label layoutX="68.0" layoutY="505.0" text="Pool data"
+                                               AnchorPane.bottomAnchor="62.0" AnchorPane.rightAnchor="66.0"/>
+                                        <Label layoutX="5.0" layoutY="530.0" text="Voters:"
+                                               AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="5.0"/>
+                                        <Label layoutX="5.0" layoutY="547.0" text="Total:"
+                                               AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="5.0"/>
+                                        <Separator prefHeight="0.0" prefWidth="185.0" AnchorPane.bottomAnchor="78.0"
+                                                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+                                        <Label fx:id="poolDataTotalVotesLabel" layoutX="47.0" layoutY="548.0"
+                                               text="0 XLM" AnchorPane.bottomAnchor="19.0"
+                                               AnchorPane.leftAnchor="47.0"/>
+                                        <Label fx:id="poolDataVotersLabel" layoutX="47.0" layoutY="531.0" text="0"
+                                               AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="47.0"/>
                                     </children>
                                 </AnchorPane>
                                 <Label layoutX="10.0" layoutY="633.0" text="Pool Address:"
@@ -67,49 +83,6 @@
                                 <Button fx:id="payBtn" layoutX="892.0" layoutY="628.0" mnemonicParsing="false"
                                         prefHeight="53.0" prefWidth="174.0" text="PAY INFLATION"
                                         AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="14.0"/>
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
-                <Tab closable="false" text="Data tools">
-                    <content>
-                        <AnchorPane>
-                            <children>
-                                <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0"
-                                           AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
-                                           AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="5.0">
-                                    <items>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                            <children>
-                                                <TextArea fx:id="federationDataTextArea1" prefHeight="200.0"
-                                                          prefWidth="200.0" stylesheets="@inflationManagerMain.css"
-                                                          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0"/>
-                                                <Label layoutX="169.0" layoutY="6.0" text="Data Set 1"
-                                                       AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0"/>
-                                            </children>
-                                        </AnchorPane>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                            <children>
-                                                <TextArea fx:id="customDataTextArea1" prefHeight="200.0"
-                                                          prefWidth="200.0" stylesheets="@inflationManagerMain.css"
-                                                          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                                          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0"/>
-                                                <Label layoutX="176.0" layoutY="6.0" text="Data Set 2"
-                                                       AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0"/>
-                                            </children>
-                                        </AnchorPane>
-                                    </items>
-                                </SplitPane>
-                                <AnchorPane layoutX="880.0" layoutY="32.0" prefHeight="584.0" prefWidth="185.0"
-                                            AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="32.0">
-                                    <children>
-                                        <Button fx:id="compareDataBtn" layoutX="5.0" layoutY="40.0"
-                                                mnemonicParsing="false" prefHeight="25.0" prefWidth="175.0"
-                                                text="Compare" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
-                                                AnchorPane.topAnchor="5.0"/>
-                                    </children>
-                                </AnchorPane>
                             </children>
                         </AnchorPane>
                     </content>
