--- a/manager/src/main/resources/inflationManagerSettings.fxml
+++ b/manager/src/main/resources/inflationManagerSettings.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -23,5 +24,18 @@
                 prefWidth="151.0" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="15.0"/>
         <Button fx:id="cancelBtn" layoutX="460.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0"
                 prefWidth="64.0" text="Cancel" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="176.0"/>
+        <Label layoutX="40.0" layoutY="148.0" text="Horizon Database Address"/>
+        <TextField fx:id="horizonDbAddress" layoutX="190.0" layoutY="144.0" prefHeight="25.0" prefWidth="374.0"
+                   promptText="localhost" AnchorPane.leftAnchor="190.0"/>
+        <TextField fx:id="horizonDbPort" layoutX="604.0" layoutY="144.0" prefHeight="25.0" prefWidth="82.0"
+                   promptText="5432" AnchorPane.leftAnchor="604.0" AnchorPane.rightAnchor="14.0"/>
+        <Label layoutX="569.0" layoutY="148.0" text="Port"/>
+        <Label layoutX="127.0" layoutY="181.0" text="Username"/>
+        <Label layoutX="424.0" layoutY="181.0" text="Password"/>
+        <TextField fx:id="horizonDbUser" layoutX="190.0" layoutY="177.0" prefHeight="25.0" prefWidth="225.0"
+                   AnchorPane.leftAnchor="190.0" AnchorPane.rightAnchor="285.0"/>
+        <TextField fx:id="horizonDbPass" layoutX="479.0" layoutY="177.0" prefHeight="25.0" prefWidth="203.0"
+                   AnchorPane.leftAnchor="479.0" AnchorPane.rightAnchor="14.0"/>
+        <Separator layoutY="131.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
     </children>
 </AnchorPane>
