- Added project icons for IntelliJ IDEA - Added pay button color and label switching based on the currently selected network (TEST/LIVE). When configured for live operation the button will be red, to highlight the fact that any screwup on behalf of the user at this point is fatal :)

--- a/manager/src/main/resources/inflationManagerMain.css
+++ b/manager/src/main/resources/inflationManagerMain.css
@@ -7,3 +7,33 @@
 .text-area .content {
     -fx-background-color: #2B2B2B;
 }
+
+.greenBg {
+    -fx-background-color: #90EE90;
+}
+
+.greenBg:hover {
+    -fx-background-color: #64EE64;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 5, 0.0, 0, 1);
+    -fx-text-alignment: center;
+}
+
+.redBg {
+    -fx-background-color: #EE4B52;
+}
+
+.redBg:hover {
+    -fx-background-color: #EE4B52;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 5, 0.0, 0, 1);
+    -fx-text-alignment: center;
+}
+
+.busy {
+    -fx-background-color: #B3B3B3;
+    -fx-text-alignment: center;
+}
+
+.busy:hover {
+    -fx-background-color: #cdcbcb;
+    -fx-text-alignment: center;
+}
