--- a/manager/src/main/resources/inflationManagerMain.fxml
+++ b/manager/src/main/resources/inflationManagerMain.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="primaryStage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
@@ -49,34 +50,34 @@
                                                 mnemonicParsing="false" prefHeight="25.0" prefWidth="170.0"
                                                 text="Get From Fed.network" AnchorPane.leftAnchor="5.0"
                                                 AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0"/>
-                                        <Separator layoutY="156.0" prefHeight="0.0" prefWidth="185.0"
+                                        <Separator layoutY="204.0" prefHeight="0.0" prefWidth="185.0"
                                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                                   AnchorPane.topAnchor="156.0"/>
-                                        <Label layoutX="70.0" layoutY="129.0" text="Votes" AnchorPane.topAnchor="129.0">
+                                                   AnchorPane.topAnchor="204.0"/>
+                                        <Label layoutX="70.0" layoutY="177.0" text="Votes" AnchorPane.topAnchor="177.0">
                                             <font>
                                                 <Font size="18.0"/>
                                             </font>
                                         </Label>
-                                        <Label layoutX="5.0" layoutY="158.0" text="Voters:" AnchorPane.leftAnchor="5.0"
-                                               AnchorPane.topAnchor="159.0"/>
-                                        <Label layoutX="5.0" layoutY="176.0" text="Votes:" AnchorPane.leftAnchor="5.0"
-                                               AnchorPane.topAnchor="176.0"/>
-                                        <Label fx:id="poolDataTotalVotesLabel" layoutX="45.0" layoutY="176.0"
-                                               text="0 XLM" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="176.0"/>
-                                        <Label fx:id="poolDataVotersLabel" layoutX="45.0" layoutY="159.0" text="0"
-                                               AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="159.0"/>
+                                        <Label layoutX="5.0" layoutY="207.0" text="Voters:" AnchorPane.leftAnchor="5.0"
+                                               AnchorPane.topAnchor="207.0"/>
+                                        <Label layoutX="5.0" layoutY="224.0" text="Votes:" AnchorPane.leftAnchor="5.0"
+                                               AnchorPane.topAnchor="224.0"/>
+                                        <Label fx:id="poolDataTotalVotesLabel" layoutX="45.0" layoutY="224.0"
+                                               text="0 XLM" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="224.0"/>
+                                        <Label fx:id="poolDataVotersLabel" layoutX="45.0" layoutY="207.0" text="0"
+                                               AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="207.0"/>
                                         <Button fx:id="getHorizonDataBtn" layoutX="6.0" layoutY="37.0"
                                                 mnemonicParsing="false" text="Get From Horizon DB"
                                                 AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
                                                 AnchorPane.topAnchor="35.0"/>
-                                        <Label layoutX="42.0" layoutY="209.0" text="Pool Balance"
-                                               AnchorPane.topAnchor="209.0">
+                                        <Label layoutX="42.0" layoutY="257.0" text="Pool Balance"
+                                               AnchorPane.topAnchor="257.0">
                                             <font>
                                                 <Font size="18.0"/>
                                             </font>
                                         </Label>
-                                        <Label fx:id="poolDataBalanceLabel" layoutX="5.0" layoutY="247.0" text="0 XLM"
-                                               AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="247.0">
+                                        <Label fx:id="poolDataBalanceLabel" layoutX="5.0" layoutY="295.0" text="0 XLM"
+                                               AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="295.0">
                                             <font>
                                                 <Font size="18.0"/>
                                             </font>
@@ -85,13 +86,26 @@
                                                 mnemonicParsing="false" prefHeight="25.0" prefWidth="167.0"
                                                 text="Save payment plan" AnchorPane.bottomAnchor="5.0"
                                                 AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"/>
-                                        <Separator layoutY="235.0" prefHeight="0.0" prefWidth="185.0"
+                                        <Separator layoutY="283.0" prefHeight="0.0" prefWidth="185.0"
                                                    AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                                   AnchorPane.topAnchor="235.0"/>
+                                                   AnchorPane.topAnchor="283.0"/>
                                         <Button fx:id="refreshPoolBalanceBtn" layoutX="65.0" layoutY="524.0"
                                                 mnemonicParsing="false" text="Refresh Pool Balance"
                                                 AnchorPane.bottomAnchor="35.0" AnchorPane.leftAnchor="5.0"
                                                 AnchorPane.rightAnchor="5.0"/>
+                                        <Rectangle fx:id="selectedNetworkRect" arcHeight="5.0" arcWidth="5.0"
+                                                   fill="#cdcdcd" height="59.0" layoutX="7.0" layoutY="70.0"
+                                                   stroke="BLACK" strokeType="INSIDE" width="175.0"
+                                                   AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
+                                                   AnchorPane.topAnchor="70.0"/>
+                                        <Label fx:id="selectedNetworkLabel" layoutX="29.0" layoutY="82.0"
+                                               prefHeight="35.0" prefWidth="127.0" textAlignment="CENTER"
+                                               AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0"
+                                               AnchorPane.topAnchor="82.0">
+                                            <font>
+                                                <Font size="18.0"/>
+                                            </font>
+                                        </Label>
                                     </children>
                                 </AnchorPane>
                                 <Label layoutX="10.0" layoutY="633.0" text="Pool Address:"
