--- a/manager/src/main/resources/inflationManagerSettings.fxml
+++ b/manager/src/main/resources/inflationManagerSettings.fxml
@@ -24,18 +24,22 @@
                 prefWidth="151.0" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="15.0"/>
         <Button fx:id="cancelBtn" layoutX="460.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0"
                 prefWidth="64.0" text="Cancel" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="176.0"/>
-        <Label layoutX="40.0" layoutY="148.0" text="Horizon Database Address"/>
-        <TextField fx:id="horizonDbAddress" layoutX="190.0" layoutY="144.0" prefHeight="25.0" prefWidth="374.0"
-                   promptText="localhost" AnchorPane.leftAnchor="190.0"/>
-        <TextField fx:id="horizonDbPort" layoutX="604.0" layoutY="144.0" prefHeight="25.0" prefWidth="82.0"
-                   promptText="5432" AnchorPane.leftAnchor="604.0" AnchorPane.rightAnchor="14.0"/>
-        <Label layoutX="569.0" layoutY="148.0" text="Port"/>
-        <Label layoutX="127.0" layoutY="181.0" text="Username"/>
-        <Label layoutX="424.0" layoutY="181.0" text="Password"/>
-        <TextField fx:id="horizonDbUser" layoutX="190.0" layoutY="177.0" prefHeight="25.0" prefWidth="225.0"
-                   AnchorPane.leftAnchor="190.0" AnchorPane.rightAnchor="285.0"/>
-        <TextField fx:id="horizonDbPass" layoutX="479.0" layoutY="177.0" prefHeight="25.0" prefWidth="203.0"
-                   AnchorPane.leftAnchor="479.0" AnchorPane.rightAnchor="14.0"/>
+        <Label layoutX="41.0" layoutY="146.0" text="Horizon Database Address"/>
+        <TextField fx:id="horizonDbAddress" layoutX="191.0" layoutY="142.0" prefHeight="25.0" prefWidth="374.0"
+                   promptText="localhost" AnchorPane.leftAnchor="191.0"/>
+        <TextField fx:id="horizonDbPort" layoutX="605.0" layoutY="142.0" prefHeight="25.0" prefWidth="82.0"
+                   promptText="5432" AnchorPane.leftAnchor="605.0" AnchorPane.rightAnchor="13.0"/>
+        <Label layoutX="570.0" layoutY="146.0" text="Port"/>
+        <Label layoutX="128.0" layoutY="179.0" text="Username"/>
+        <Label layoutX="425.0" layoutY="179.0" text="Password"/>
+        <TextField fx:id="horizonDbUser" layoutX="191.0" layoutY="175.0" prefHeight="25.0" prefWidth="225.0"
+                   AnchorPane.leftAnchor="191.0" AnchorPane.rightAnchor="284.0"/>
+        <TextField fx:id="horizonDbPass" layoutX="480.0" layoutY="175.0" prefHeight="25.0" prefWidth="203.0"
+                   AnchorPane.leftAnchor="480.0" AnchorPane.rightAnchor="13.0"/>
         <Separator layoutY="131.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+        <Label layoutX="309.0" layoutY="215.0" text="!!! WARNING !!!" textFill="RED"/>
+        <Label layoutX="58.0" layoutY="232.0" prefHeight="55.0" prefWidth="585.0"
+               text="When using your own horizon node to retrieve inflation votes make sure that it is operating on the same network (TEST/LIVE) as the one you have selected above. The pool balance might otherwise not reflect the actual balance of your pool, since it's not retrieved from the horizon database."
+               textFill="RED" wrapText="true"/>
     </children>
 </AnchorPane>
